--- a/Blogs.html
+++ b/Blogs.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blogs</title>
+    <link rel="stylesheet" href="Styles/Blogs.css">
 </head>
 <body>
-    
+    <div>
+        <h2>My First website</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque iure accusantium quod? Est magnam modi sit obcaecati explicabo rem, ea fugiat laborum amet, iste similique et at nulla quos in.</p>
+    </div>
+    <div>
+        <h2>My Second Website</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque iure accusantium quod? Est magnam modi sit obcaecati explicabo rem, ea fugiat laborum amet, iste similique et at nulla quos in.</p>
+    </div>
+    <div>
+        <h2>My Third Website</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque iure accusantium quod? Est magnam modi sit obcaecati explicabo rem, ea fugiat laborum amet, iste similique et at nulla quos in.</p>
+    </div>
 </body>
 </html>
