--- a/Blogs.html
+++ b/Blogs.html
@@ -19,5 +19,13 @@
         <h2>My Third Website</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque iure accusantium quod? Est magnam modi sit obcaecati explicabo rem, ea fugiat laborum amet, iste similique et at nulla quos in.</p>
     </div>
+    <div>
+        <h3>Git push credentials</h3>
+        <ol>
+            <li>Git add .</li>
+            <li>Git commit -m"Your Text</li>
+            <li>Git Push</li>
+        </ol>
+    </div>
 </body>
 </html>
