--- a/Blogs.html
+++ b/Blogs.html
@@ -26,6 +26,9 @@
             <li>Git commit -m"Your Text</li>
             <li>Git Push</li>
         </ol>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita at quos veritatis cum, mollitia, harum esse assumenda architecto quia soluta culpa id sed sit. Optio explicabo quis dolorum commodi earum!</p>
+        </div>
     </div>
 </body>
 </html>
